--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TE34WYPXVX"></script>
-        <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-TE34WYPXVX"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-        gtag('config', 'G-TE34WYPXVX');
+      gtag("config", "G-TE34WYPXVX");
     </script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Somos un estudio jurídico especializado en contratación pública fundado hace más de 13 años conformado por abogados especialistas, donde la excelencia legal se encuentra con la modernidad y el compromiso con nuestros clientes, brindando soluciones jurídicas integrales y personalizadas. Valoramos y honramos la confianza que depositan en nuestros servicios legales, construyendo relaciones sólidas y duraderas. Nuestro enfoque se basa en una comunicación cercana y transparente con los clientes, permitiéndonos comprender a fondo sus necesidades y objetivos, para así brindarles asesoramiento legal estratégico orientadas a soluciones innovadoras y adaptadas a sus circunstancias particulares. Estamos confiados en que podemos ser un partner estratégico para su empresa.">
-    <title>Betancourt Abogados </title>
-</head>
-<body>
-</body>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Somos un estudio jurídico especializado en contratación pública fundado hace más de 13 años conformado por abogados especialistas, donde la excelencia legal se encuentra con la modernidad y el compromiso con nuestros clientes, brindando soluciones jurídicas integrales y personalizadas. Valoramos y honramos la confianza que depositan en nuestros servicios legales, construyendo relaciones sólidas y duraderas. Nuestro enfoque se basa en una comunicación cercana y transparente con los clientes, permitiéndonos comprender a fondo sus necesidades y objetivos, para así brindarles asesoramiento legal estratégico orientadas a soluciones innovadoras y adaptadas a sus circunstancias particulares. Estamos confiados en que podemos ser un partner estratégico para su empresa."
+    />
+    <title>Betancourt Abogados</title>
+  </head>
+  <body></body>
 </html>
