--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Somos un estudio jurídico especializado en contratación pública fundado hace más de 13 años conformado por abogados especialistas, donde la excelencia legal se encuentra con la modernidad y el compromiso con nuestros clientes, brindando soluciones jurídicas integrales y personalizadas. Valoramos y honramos la confianza que depositan en nuestros servicios legales, construyendo relaciones sólidas y duraderas. Nuestro enfoque se basa en una comunicación cercana y transparente con los clientes, permitiéndonos comprender a fondo sus necesidades y objetivos, para así brindarles asesoramiento legal estratégico orientadas a soluciones innovadoras y adaptadas a sus circunstancias particulares. Estamos confiados en que podemos ser un partner estratégico para su empresa."
+      content="Somos un bufete de abogados en contratación pública fundado hace más de 13 años conformado por abogados especialistas en mercado público, donde la asesoría legal se encuentra con la excelencia y el compromiso con nuestros clientes, brindando soluciones jurídicas personalizadas. Valoramos y honramos la confianza que depositan en nuestros servicios legales, construyendo relaciones sólidas y duraderas. Nuestra oficina de abogados en línea se basa en una comunicación cercana y transparente con los clientes, permitiéndonos comprender a fondo sus necesidades y objetivos, para así brindarles asesoramiento legal, capacitación en chilecompra, compra ágil en mercado público, entre otros."
     />
     <title>Betancourt Abogados</title>
   </head>
