Agrega metadatos descriptivos

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Betancourt Abogados</title>
+     <meta
+      name="description"
+      content="Somos un bufete de abogados en contratación pública fundado hace más de 13 años conformado por abogados especialistas en mercado público, donde la asesoría legal se encuentra con la excelencia y el compromiso con nuestros clientes, brindando soluciones jurídicas personalizadas. Valoramos y honramos la confianza que depositan en nuestros servicios legales, construyendo relaciones sólidas y duraderas. Nuestra oficina de abogados en línea se basa en una comunicación cercana y transparente con los clientes, permitiéndonos comprender a fondo sus necesidades y objetivos, para así brindarles asesoramiento legal, capacitación en chilecompra, compra ágil en mercado público, entre otros."
+    />
     <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
   </head>
   <body>
