--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-TE34WYPXVX"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "G-TE34WYPXVX");
-    </script>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Somos un bufete de abogados en contratación pública fundado hace más de 13 años conformado por abogados especialistas en mercado público, donde la asesoría legal se encuentra con la excelencia y el compromiso con nuestros clientes, brindando soluciones jurídicas personalizadas. Valoramos y honramos la confianza que depositan en nuestros servicios legales, construyendo relaciones sólidas y duraderas. Nuestra oficina de abogados en línea se basa en una comunicación cercana y transparente con los clientes, permitiéndonos comprender a fondo sus necesidades y objetivos, para así brindarles asesoramiento legal, capacitación en chilecompra, compra ágil en mercado público, entre otros."
-    />
-    <title>CACABetancourt Abogados</title>
-    <link rel="icon" href="../assets/logo1.png">
-  </head>
-  <body></body>
+
+<head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TE34WYPXVX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+    gtag("config", "G-TE34WYPXVX");
+  </script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Somos un bufete de abogados especializado en contratación pública, con más de 13 años de experiencia. Nuestro equipo de abogados se dedica al mercado público, brindando asesoría legal personalizada y soluciones jurídicas eficientes. Ofrecemos servicios como capacitación en ChileCompra, compra ágil en mercado público y más."
+    <title>Betancourt Abogados | Asesoría jurídica en mercado público</title>
+  <link rel="icon" href="../assets/logo1.png">
+</head>
+
+<body></body>
+
 </html>
