--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Betancourt Abogados</title>
-     <meta
-      name="description"
-      content="Somos un bufete de abogados en contratación pública fundado hace más de 13 años conformado por abogados especialistas en mercado público, donde la asesoría legal se encuentra con la excelencia y el compromiso con nuestros clientes, brindando soluciones jurídicas personalizadas. Valoramos y honramos la confianza que depositan en nuestros servicios legales, construyendo relaciones sólidas y duraderas. Nuestra oficina de abogados en línea se basa en una comunicación cercana y transparente con los clientes, permitiéndonos comprender a fondo sus necesidades y objetivos, para así brindarles asesoramiento legal, capacitación en chilecompra, compra ágil en mercado público, entre otros."
-    />
-    <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+  <title>Betancourt Abogados</title>
+  <meta name="description"
+    content="Somos un bufete de abogados especializado en contratación pública, con más de 13 años de experiencia. Nuestro equipo de abogados altamente calificados se dedica al mercado público, brindando asesoría legal personalizada y soluciones jurídicas eficientes. Ofrecemos servicios como capacitación en ChileCompra, compra ágil en mercado público y más." />
+  <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+        properly without JavaScript enabled. Please enable it to
+        continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
