se agrega google ads en html y arreglos de traduccion

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,19 @@
   <meta name="description"
     content="Somos un bufete de abogados especializado en contratación pública, con más de 13 años de experiencia. Nuestro equipo de abogados altamente calificados se dedica al mercado público, brindando asesoría legal personalizada y soluciones jurídicas eficientes. Ofrecemos servicios como capacitación en ChileCompra, compra ágil en mercado público y más." />
   <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
+
+  <!-- Google Ads Script -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16657918365"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-16657918365');
+  </script>
+
 </head>
 
 <body>
